CMAKE_MINIMUM_REQUIRED (VERSION 3.7.2)

IF(NOT WIN32)
    IF(NOT CMAKE_BUILD_TYPE)
        SET(CMAKE_BUILD_TYPE "Release")
    ENDIF()

    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
ENDIF(NOT WIN32)

find_package(OpenMP)

SET(app_dir ${IFCPP_SOURCE_DIR}/examples/LoadFileExampleConsole)


SET(IFCPPAPP_SOURCE_FILES 
    ${IFCPP_SOURCE_DIR}/examples/LoadFileExampleConsole/src/main.cpp
)

ADD_EXECUTABLE(LoadFileExampleConsole 
    ${IFCPPVIEWER_MOC_GENERATED_FILES}
    ${IFCPPAPP_SOURCE_FILES}
    ${SimpleViewerExample_RESOURCES_RCC}
)

set_target_properties(LoadFileExampleConsole PROPERTIES DEBUG_POSTFIX "d")


if(OpenMP_CXX_FOUND)
    TARGET_LINK_LIBRARIES(LoadFileExampleConsole IfcPlusPlus PUBLIC OpenMP::OpenMP_CXX)
else(OpenMP_CXX_FOUND)
	TARGET_LINK_LIBRARIES(LoadFileExampleConsole IfcPlusPlus)
endif()

TARGET_INCLUDE_DIRECTORIES(LoadFileExampleConsole
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/src
    ${CMAKE_CURRENT_SOURCE_DIR}/src/external
	${CMAKE_CURRENT_SOURCE_DIR}/src/external/RapidJSON
)

INSTALL(
    TARGETS LoadFileExampleConsole
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION bin
    ARCHIVE DESTINATION lib
)
