CMAKE_MINIMUM_REQUIRED (VERSION 3.7.2)

IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE "Release")
ENDIF()

IF(NOT WIN32)
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
    SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_BINARY_DIR}/${CMAKE_BUILD_TYPE})
ENDIF(NOT WIN32)

ADD_DEFINITIONS(-DGLM_FORCE_CTOR_INIT)
ADD_DEFINITIONS(-DGLM_FORCE_XYZW_ONLY)
ADD_DEFINITIONS(-DUNICODE)
ADD_DEFINITIONS(-D_UNICODE)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

IF(BUILD_STATIC_LIBRARY)
	ADD_DEFINITIONS(-DIFCQUERY_STATIC_LIB)
ENDIF()

if(NOT DEFINED USE_OPENMP)
  set(USE_OPENMP True)
endif()

if(USE_OPENMP)
  find_package(OpenMP)
endif()

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/IfcPlusPlus/Debug)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/IfcPlusPlus/${CMAKE_BUILD_TYPE})
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/external/Carve/Debug)
LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/external/Carve/${CMAKE_BUILD_TYPE})

ADD_EXECUTABLE(LoadFileWithGeometryExampleConsole 
    ${IFCPP_SOURCE_DIR}/examples/LoadFileWithGeometryExampleConsole/src/main.cpp
)

set_target_properties(LoadFileWithGeometryExampleConsole PROPERTIES DEBUG_POSTFIX "d")
set_target_properties(LoadFileWithGeometryExampleConsole PROPERTIES CXX_STANDARD 20)
set_target_properties(LoadFileWithGeometryExampleConsole PROPERTIES VS_DEBUGGER_ENVIRONMENT "PATH=../../IfcPlusPlus/Debug;../../IfcPlusPlus/Release;$(PATH)") # is there a way to set Debug/Release by one variable?

if(OpenMP_CXX_FOUND)
    TARGET_LINK_LIBRARIES(LoadFileWithGeometryExampleConsole 
		optimized OpenMP::OpenMP_CXX
		optimized IfcPlusPlus debug IfcPlusPlusd 
		optimized carve debug carved )
		
else(OpenMP_CXX_FOUND)
	TARGET_LINK_LIBRARIES(LoadFileWithGeometryExampleConsole 
		optimized IfcPlusPlus debug IfcPlusPlusd 
		optimized carve debug carved)
endif()

IF(BUILD_STATIC_LIBRARY)
	ADD_DEFINITIONS(-DIFCQUERY_STATIC_LIB)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(LoadFileWithGeometryExampleConsole
    PRIVATE
	${CMAKE_CURRENT_SOURCE_DIR}/src
	${IFCPP_SOURCE_DIR}/IfcPlusPlus/src
	${IFCPP_SOURCE_DIR}/IfcPlusPlus/src/ifcpp/IFC4X3/include
	${IFCPP_SOURCE_DIR}/IfcPlusPlus/src/external
	${IFCPP_SOURCE_DIR}/IfcPlusPlus/src/external/glm
	${IFCPP_SOURCE_DIR}/external/
	${IFCPP_SOURCE_DIR}/external/Carve
	${IFCPP_SOURCE_DIR}/external/Carve/src
	${IFCPP_SOURCE_DIR}/external/Carve/src/lib
	${IFCPP_SOURCE_DIR}/external/Carve/src/common
	${IFCPP_SOURCE_DIR}/external/Carve/src/include
)

		
INSTALL(
    TARGETS LoadFileWithGeometryExampleConsole
    RUNTIME DESTINATION bin
    LIBRARY DESTINATION bin
    ARCHIVE DESTINATION lib
)
